Fix scrollbar showing

--- a/src/assets/stylesheets/info-dialog.scss
+++ b/src/assets/stylesheets/info-dialog.scss
@@ -11,7 +11,7 @@
 .dialog {
   display: grid;
   grid-template-columns: 1fr 20px minmax(200px, 525px) 20px 1fr;
-  grid-template-rows: 1fr 20px 350px 20px 1fr;
+  grid-template-rows: 1fr 20px 360px 20px 1fr;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,.2);
